[gd_scene load_steps=11 format=2]

[ext_resource path="res://Creatures/Character.gd" type="Script" id=1]
[ext_resource path="res://AnimationPlayer.gd" type="Script" id=2]
[ext_resource path="res://SpriteSheets/CastleSpriteSheet.png" type="Texture" id=3]

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 128, 16, 16, 16 ), Rect2( 144, 16, 16, 16 ), Rect2( 160, 16, 16, 16 ), Rect2( 176, 16, 16, 16 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 256, 16, 16, 16 ), Rect2( 272, 16, 16, 16 ), Rect2( 288, 16, 16, 16 ), Rect2( 304, 16, 16, 16 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 192, 16, 16, 16 ), Rect2( 208, 16, 16, 16 ), Rect2( 224, 16, 16, 16 ), Rect2( 240, 16, 16, 16 ) ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 16, 16, 16 ), Rect2( 16, 16, 16, 16 ), Rect2( 32, 16, 16, 16 ), Rect2( 48, 16, 16, 16 ) ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 320, 16, 16, 16 ), Rect2( 336, 16, 16, 16 ), Rect2( 352, 16, 16, 16 ), Rect2( 368, 16, 16, 16 ) ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 64, 16, 16, 16 ), Rect2( 80, 16, 16, 16 ), Rect2( 96, 16, 16, 16 ), Rect2( 112, 16, 16, 16 ) ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 128.0

[node name="Character" type="KinematicBody2D"]
position = Vector2( 102.926, 70.7857 )
collision_layer = 3
script = ExtResource( 1 )
attack_distance = 36.0

[node name="CharacterSprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 16, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CharacterSprite")
anims/Attack = SubResource( 9 )
anims/Death = SubResource( 10 )
anims/Hit = SubResource( 11 )
anims/Idle = SubResource( 12 )
anims/Special = SubResource( 13 )
anims/Walk = SubResource( 14 )
script = ExtResource( 2 )

[node name="AttackRight" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 2

[node name="AttackLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( -24, 0 )
collision_mask = 2

[node name="AttackView" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackView"]
shape = SubResource( 8 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="AttackView" to="." method="_on_AttackView_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
